# learning-rust

./: .gitattributes  .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: main.yml
basics/: Cargo.toml
basics/src/: basic_concepts.rs  c_functions.rs  compound_types.rs  control_flow.rs  f_compound_types.rs  g_control_flow.rs  h_strings.rs  i_ownership.rs  j_structs.rs  k_traits.rs  l_collections.rs  lib.rs  m_enums.rs  main.rs  n_closures.rs  o_iterators.rs  o_threads.rs  p_threads.rs  q_errors.rs  r_logging.rs  r_threads.rs  scalar_types.rs  simple_types.rs  variables.rs
hello/: Cargo.toml
image-processing/: Cargo.toml
image-processing/src/: lib.rs  main.rs
space-invaders/: Cargo.toml
space-invaders/src/: frame.rs  invaders.rs  lib.rs  main.rs  player.rs  shot.rs  view.rs
ultimate-rust-2/: Cargo.toml
ultimate-rust-2/example/hello/: Cargo.toml
ultimate-rust-2/example/hello/benches/: snuggle_speed.rs
ultimate-rust-2/example/kitchen/: Cargo.toml
ultimate-rust-2/example/kitchen/src/: main.rs
ultimate-rust-2/exercise/docs/src/: lib.rs
ultimate-rust-2/exercise/errors/: Cargo.toml
ultimate-rust-2/exercise/game/: .gitignore  Cargo.toml
ultimate-rust-2/exercise/game/src/: main.rs
ultimate-rust-2/exercise/logging/: Cargo.toml
ultimate-rust-2/exercise/testing/: Cargo.toml
ultimate-rust-2/exercise/threads_channels/: Cargo.toml
yaml-templating/: Cargo.toml  config.yaml
yaml-templating/input/countries/: nl.yaml
yaml-templating/input/languages/: variables.yaml
yaml-templating/src/: main.rs
(+12 files in other folders)
