[package]
name = "basics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossbeam = "0.8.2"
thiserror = "1.0.37"
anyhow = "1.0.51"
log = "0.4"
env_logger = "0.9.1"
dotenvy = "0.15.5"
